# tinydialect

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  test.ll  tiny_dialect_exe
lib/Conversion/: CMakeLists.txt
lib/Conversion/TinyToStandard/: CMakeLists.txt  TinyToStandard.cpp  TinyToStandard.h  TinyToStandard.td
lib/Dialect/Tiny/: CMakeLists.txt  TinyDialect.cpp  TinyDialect.h  TinyDialect.td  TinyOps.cpp  TinyOps.h  TinyOps.td  TinyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  CMakeLists.txt  Passes.h  Passes.td
tests/: CMakeLists.txt  lit.cmake.cfg.py  tiny_add.mlir  tiny_conversion.mlir  tiny_mul.mlir  tiny_syntax.mlir  tiny_to_llvm.ll  tiny_to_llvm.mlir  tiny_to_llvm_main.c  tiny_to_standard.mlir
tools/: CMakeLists.txt  tinydialect-opt.cpp  tinydialect.cpp
